--- a/public/schedule.html
+++ b/public/schedule.html
@@ -13,9 +13,9 @@
 
 <body class="container-fluid p-0">
 
-    <div class="container-phone p-0 m-0" id="app">
+    <div class="container-phone d-flex flex-column p-0 m-0" id="app">
         <header class="header-schedule">
-            <h1 class="title-schedule">Events</h1>
+            <h1 class="title-schedule ps-3">Events</h1>
             <form class="schedule-selection">
                 <input type="radio" name="schedule-selection" v-model="period" value="all" class="btn-check" id="all"
                     autocomplete="off">
@@ -32,7 +32,7 @@
             <span class="selection week">WEEK</span> -->
             </form>
         </header>
-        <main class="main-schedule container-fluid p-0 pb-5" id="app">
+        <main class="main-schedule flex-fill">
             <template v-if="events.length == 0">
                 <div class="text-center">
                     <div class="spinner-border" role="status">
@@ -65,7 +65,7 @@
                                 </svg>
                             </button>
                             <button class="button-normalize" v-if="eve.add" @click="addReminder(eve)">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#c44a35"
                                     class="bi bi-bell" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
@@ -73,7 +73,7 @@
                             </button>
                             <button v-else class="button-normalize" @click="deleteReminder(eve)">
 
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#c44a35"
                                     class="bi bi-bell-fill" viewBox="0 0 16 16">
                                     <path
                                         d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z" />
@@ -91,14 +91,14 @@
                                         loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                                 </div>
                                 <div class="modal-body modal-body-event">
-                                    <h4 class="text-center">{{eve.teams}}</h4>
-                                    <div class="d-flex justify-content-between mt-5">
+                                    <h4 class="text-center title-modal">{{eve.teams}}</h4>
+                                    <div class="d-flex justify-content-between mt-4">
 
-                                        <span>{{eve.date }}{{"-"}}{{ eve.time}}</span>
+                                        <span>{{eve.date }}{{" - "}}{{ eve.time}}</span>
 
                                         <button class="button-normalize" v-if="eve.add" @click="addReminder(eve)">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+                                                fill="#c44a35" class="bi bi-bell" viewBox="0 0 16 16">
                                                 <path
                                                     d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
                                             </svg>
@@ -106,13 +106,13 @@
                                         <button v-else class="button-normalize" @click="deleteReminder(eve)">
 
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-                                                fill="currentColor" class="bi bi-bell-fill" viewBox="0 0 16 16">
+                                                fill="#c44a35" class="bi bi-bell-fill" viewBox="0 0 16 16">
                                                 <path
                                                     d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zm.995-14.901a1 1 0 1 0-1.99 0A5.002 5.002 0 0 0 3 6c0 1.098-.5 6-2 7h14c-1.5-1-2-5.902-2-7 0-2.42-1.72-4.44-4.005-4.901z" />
                                             </svg>
                                         </button>
                                     </div>
-                                    <p class="text-center mt-5">{{eve.location}}</p>
+                                    <p class="text-center mt-3">{{eve.location}}</p>
                                     <p class="text-center mt-4">{{eve.address}}</p>
 
                                 </div>
@@ -126,7 +126,8 @@
                 </div>
             </template>
         </main>
-        <nav class="nav-bar d-flex align-items-center">
+      
+        <nav class="nav-bar nav-bar-schedule d-flex align-items-center">
             <a href="./index.html" type="button" @click="vibrate(50)"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor"
                     class="sound-icon iconos-nav bi bi-house-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd"
