--- a/public/user.html
+++ b/public/user.html
@@ -13,49 +13,62 @@
 
 <body>
   <div class="body container-fluid p-0 m-0" id="app">
-    <div v-if="!logged" class="container-phone p-0 m-0 d-flex flex-column justify-content-between align-items-center">
-      <a href="./index.html" class="mt-1 align-self-start d-flex justify-content-center align-items-center"> <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30"
-          fill="gray" class="bi bi-arrow-left-square-fill me-2 ms-2" viewBox="0 0 16 16">
-          <path
-            d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z" />
-        </svg> <span>Home</span></a>
-      <img draggable="false" class="img-login" src="./assets/img/mdhl_logo.png" alt="logo mighty ducks hockey league">
-      <div>
-        <h1 class="ps-3 title-login">MIGHTY DUCKS </h1>
-        <h1 class="title-login text-end pe-3">HOCKEY LEAGUE</h1>
-      </div>
-      <form class="container-fluid d-flex flex-column px-4 m-0">
-        <label class="mb-1">Email</label>
-        <input type="email" class="form-control input-login" />
-        <label class="mb-1">Password</label>
-        <input type="passsword" class="form-control  input-login" />
-        <a href="./index.html" @click="login()" class="button-login text-center">Login</a>
-      </form>
-      <div class="container-fluid px-4 m-0">
-        <p class="mb-3 text-center">or</p>
-        <button type="button"
-          class="button-normalize d-flex justify-content-center align-items-center button-google"><svg
-            xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google me-2"
-            viewBox="0 0 16 16">
+    <div v-if="!logged" class="container-phone p-0 m-0 d-flex flex-column justify-content-between">
+      <header class="d-flex justify-content-start">
+        <a href="./index.html" class="mt-3 align-self-start d-flex justify-content-center align-items-center"> <svg
+            xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="gray"
+            class="bi bi-arrow-left-square-fill me-2 ms-3" viewBox="0 0 16 16">
             <path
-              d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z" />
-          </svg><span>Continue with google</span></button>
-      </div>
-      <span class="text-register mb-2">Don't have an account? <button type="button"
-          class="button-normalize button-register">Register</button< /span>
+              d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1z" />
+          </svg> <span>Home</span></a>
+      </header>
+      <main class="main-login flex-fill container-fluid p-0 m-0">
+        <div class="container-img-login flex-fill container-fluid p-0 m-0 d-flex flex-column justify-content-center align-items-center">
+          <img draggable="false" class="img-login" src="./assets/img/mdhl_logo.png"
+            alt="logo mighty ducks hockey league">
+          <div class="container-title-login">
+            <h1 class="ps-3 title-login">MIGHTY DUCKS </h1>
+            <h1 class="title-login text-end pe-3">HOCKEY LEAGUE</h1>
+          </div>
+        </div>
+        <div class="container-fluid p-0 m-0 d-flex flex-column justify-content-between px-2 align-items-center">
+            <form class="container-fluid d-flex flex-column p-0 m-0">
+              <label class="mb-1">Email</label>
+              <input type="email" class="form-control input-login mb-3" />
+              <label class="mb-1">Password</label>
+              <input type="passsword" class="form-control input-login mb-4" />
+              <a href="./index.html" @click="login()" class="button-login text-center">Login</a>
+            </form>
+            <p class="mt-3 mb-3 text-center">or</p>
+            <button type="button"
+              class="button-normalize d-flex justify-content-center align-items-center button-google"><svg
+                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-google me-2"
+                viewBox="0 0 16 16">
+                <path
+                  d="M15.545 6.558a9.42 9.42 0 0 1 .139 1.626c0 2.434-.87 4.492-2.384 5.885h.002C11.978 15.292 10.158 16 8 16A8 8 0 1 1 8 0a7.689 7.689 0 0 1 5.352 2.082l-2.284 2.284A4.347 4.347 0 0 0 8 3.166c-2.087 0-3.86 1.408-4.492 3.304a4.792 4.792 0 0 0 0 3.063h.003c.635 1.893 2.405 3.301 4.492 3.301 1.078 0 2.004-.276 2.722-.764h-.003a3.702 3.702 0 0 0 1.599-2.431H8v-3.08h7.545z" />
+              </svg><span>Continue with google</span></button>
+
+            <span class="text-register my-3">Don't have an account? <button type="button"
+                class="button-normalize button-register">Register</button></span>
+          
+        </div>
+      </main>
     </div>
-    <div v-else class="container-phone p-0 m-0">
-      <header class="d-flex justify-content-end mt-2 pe-2">
-        <button @click="logout()" class="button-normalize log-out">Log out<svg xmlns="http://www.w3.org/2000/svg"
-            width="18" height="18" fill="currentColor" class="bi bi-box-arrow-right ms-2 mt-1" viewBox="0 0 16 16">
+
+    <div v-else class="container-phone d-flex flex-column justify-content-between p-0 m-0">
+      <header class="header-account d-flex justify-content-end px-2 pe-2">
+        <button @click="logout()"
+          class="button-normalize d-flex justify-content-center align-items-center log-out"><span
+            class="align-bottom">Log out</span><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+            fill="#c44a35" class="bi bi-box-arrow-right ms-2 mb-2" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
               d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z" />
             <path fill-rule="evenodd"
               d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
           </svg></button>
       </header>
-      <main class="main-account d-flex flex-column justify-content-between">
-        <div>
+      <main class="main-account">
+        <div class="banner">
           <div class="container-user-image mt-1">
             <img src="./assets/img/user.png" alt="user image" class="user-image">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
@@ -64,8 +77,8 @@
                 d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
             </svg>
           </div>
-          <p class="text-center mb-0 mt-1">@username<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
-              fill="gray" class="bi bi-pencil-square  ms-2" viewBox="0 0 16 16">
+          <p class="text-center text-light mb-0 mt-1">@username<svg xmlns="http://www.w3.org/2000/svg" width="16"
+              height="16" fill="ivory" class="bi bi-pencil-square  ms-2" viewBox="0 0 16 16">
               <path
                 d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
               <path fill-rule="evenodd"
@@ -73,7 +86,7 @@
             </svg></p>
         </div>
         <div class="personal-data mb-2">
-          <h4 class="normalize-h d-flex justify-content-between">Personal information<button v-if="conditionInput"
+          <h4 class="normalize-h d-flex justify-content-between">Personal data<button v-if="conditionInput"
               type="button" @click="enableEdition()" class="button-normalize"><svg xmlns="http://www.w3.org/2000/svg"
                 width="16" height="16" fill="gray" class="bi bi-pencil-square  ms-auto" viewBox="0 0 16 16">
                 <path
@@ -83,13 +96,13 @@
               </svg></button><button type="button" @click="saveChanges()" class="button-normalize button-save"
               v-else>Save</button></h4>
           <label for="name" class="mb-1">Name</label>
-          <input :disabled="conditionInput" required id="name" type="text" class="form-control mb-2" v-model="name"
+          <input :disabled="conditionInput" required id="name" type="text" class="form-control-data mb-2" v-model="name"
             :placeholder="placeName" aria-label="Username" aria-describedby="basic-addon1">
           <label for="last_name" class="mb-1">Lastname</label>
-          <input :disabled="conditionInput" id="last_name" type="text" class="form-control  mb-2" v-model="lastName"
+          <input :disabled="conditionInput" id="last_name" type="text" class="form-control-data mb-2" v-model="lastName"
             :placeholder="placeLastName" aria-label="Username" aria-describedby="basic-addon1">
           <label for="age" class="mb-1">Age</label>
-          <input :disabled="conditionInput" id="age" type="number" class="form-control mb-2" max="20" v-model="age"
+          <input :disabled="conditionInput" id="age" type="number" class="form-control-data mb-2" max="20" v-model="age"
             :placeholder="placeAge" aria-label="Username" aria-describedby="basic-addon1">
           <div class="d-flex">
             <label for="gender" class="mb-1">Gender</label>
@@ -101,7 +114,7 @@
               <label class="btn button-gender  ms-2" for="female">Female</label>
             </div>
           </div>
-          <input disabled id="gender" type="text" class="form-control mb-1" v-model="gender" :placeholder="placeGender"
+          <input disabled id="gender" type="text" class="form-control-data mb-1" v-model="gender" :placeholder="placeGender"
             aria-label="Username" aria-describedby="basic-addon1">
 
 
@@ -121,14 +134,15 @@
             </div>
             <div class="form-check form-switch mb-2">
               <label class="form-check-label" for="sound">Turn on sound</label>
-              <input class="form-check-input" type="checkbox" role="switch" id="sound">
+              <input v-model="sound" class="form-check-input" type="checkbox" role="switch" id="sound">
             </div>
           </div>
 
         </div>
 
       </main>
-      <nav class="nav-bar d-flex align-items-center">
+      <div class="nav-bar"></div>
+      <nav class="nav-bar nav-bar-schedule d-flex align-items-center">
         <a href="./index.html" type="button" @click="vibrate(50)"><svg xmlns="http://www.w3.org/2000/svg"
             fill="currentColor" class="sound-icon iconos-nav bi bi-house-fill" viewBox="0 0 16 16">
             <path fill-rule="evenodd"
