--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <div id="app">
-  
+
     <div v-bind:class="{ 'dark-mode': darkMode, 'light-mode': !darkMode }">
       <div v-if="page === 'home'" class="container-phone d-flex flex-column justify-content-between p-0 m-0">
         <header class="header-home">
@@ -38,47 +38,52 @@
                 <h5 class="title-schedule  ps-3" id="exampleModalToggleLabel">Notifications</h5>
               </div>
               <div class="modal-body p-0 pb-1">
-                <div class="container-schedule" v-for="eve in reminders">
-                  <div class="card-event-notification">
-                    <p class="m-0 event-reason text-center">{{eve.reason}}</p>
-                    <div class="mb-0 d-flex justify-content-between align-items-center pt-2">
+                <div v-if="reminders.length == 0">
+                  <span class="span-gray mt-3">No tiene recordatorios</span>
+                </div>
+                <template v-else>
+                  <div class="container-schedule" v-for="eve in reminders">
+                    <div class="card-event-notification">
+                      <p class="m-0 event-reason text-center">{{eve.reason}}</p>
+                      <div class="mb-0 d-flex justify-content-between align-items-center pt-2">
 
-                      <div class="info-event ps-4 pt-1">
+                        <div class="info-event ps-4 pt-1">
 
-                        <h3 class="title-rules">{{eve.teams}}</h3>
-                        <p>{{eve.location}}</p>
-                        <p class="mb-0">{{eve.date}}</p>
-                      </div>
-                      <div class="buttons-event-notifications d-flex flex-column justify-content-between pe-3">
-                        <!--BUTTON-->
-                        <button type="button" class="button-normalize" @click="moreInfo(eve)" data-bs-toggle="modal"
-                          data-bs-target="#more_info">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
-                            <path
-                              d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
-                          </svg>
-                        </button>
+                          <h3 class="title-rules">{{eve.teams}}</h3>
+                          <p>{{eve.location}}</p>
+                          <p class="mb-0">{{eve.date}}</p>
+                        </div>
+                        <div class="buttons-event-notifications d-flex flex-column justify-content-between pe-3">
+                          <!--BUTTON-->
+                          <button type="button" class="button-normalize" @click="moreInfo(eve)" data-bs-toggle="modal"
+                            data-bs-target="#more_info">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                              class="bi bi-three-dots-vertical" viewBox="0 0 16 16">
+                              <path
+                                d="M9.5 13a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zm0-5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z" />
+                            </svg>
+                          </button>
 
-                        <button class="button-normalize" v-if="eve.add" @click="addReminder(eve)">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-bell" viewBox="0 0 16 16">
-                            <path
-                              d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
-                          </svg>
-                        </button>
-                        <button class="button-normalize" v-else @click="deleteReminder(eve)">
+                          <button class="button-normalize" v-if="eve.add" @click="addReminder(eve)">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                              class="bi bi-bell" viewBox="0 0 16 16">
+                              <path
+                                d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
+                            </svg>
+                          </button>
+                          <button class="button-normalize" v-else @click="deleteReminder(eve)">
 
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                            class="bi bi-x-lg" viewBox="0 0 16 16">
-                            <path
-                              d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
-                          </svg>
-                        </button>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                              class="bi bi-x-lg" viewBox="0 0 16 16">
+                              <path
+                                d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854Z" />
+                            </svg>
+                          </button>
+                        </div>
                       </div>
                     </div>
                   </div>
-                </div>
+                </template>
               </div>
               <div class="modal-footer d-flex justify-content-center">
                 <button type="button" class="button-normalize button-go-back" data-bs-dismiss="modal">Go back</button>
@@ -129,7 +134,7 @@
         </div>
         <main class="main">
           <div class="container-title-home">
-            <h1 class="title-home me-3 mt-2">MDHL</h1>
+            <h1 class="title-home">MDHL</h1>
             <h2 class="h-see">SEE WHAT EVENTS</h2>
             <h2 class="h-coming"> ARE COMING</h2>
           </div>
@@ -717,8 +722,7 @@
                     </div>
                   </div>
                   <div class="modal-footer d-flex justify-content-center">
-                    <button type="button" class="btn button-normalize button-go-back" data-bs-dismiss="modal">Go
-                      back</button>
+                    <button type="button" class="button-normalize button-go-back" data-bs-dismiss="modal">Go back</button>
                   </div>
                 </div>
               </div>
@@ -755,7 +759,7 @@
           <template v-else>
             {{filterByPeriod}}
             <div class="container-fluid p-0 d-flex justify-content-center" v-if="eventsFiltered.length == 0">
-              <span class="text-center mt-3">No match founds</span>
+              <span class="span-gray mt-3">No match founds</span>
             </div>
             <div class="container-schedule" v-for="eve in eventsFiltered">
 
@@ -901,14 +905,16 @@
           <div class="banner">
             <div class="container-user-image m-0">
               <img src="./assets/img/user.png" alt="user image" class="user-image">
-              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+              <input class="d-none" type="file" id="userimg" name="userimg" accept="image/*">
+              <label for="userimg"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                 class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
                 <path
                   d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" />
-              </svg>
+              </svg></label>
             </div>
-            <p class="text-center mb-0 mt-1">@username<svg xmlns="http://www.w3.org/2000/svg" width="16"
-                height="16" fill="ivory" class="bi bi-pencil-square  ms-2" viewBox="0 0 16 16">
+            
+            <p class="text-center text-light mb-0 mt-1">@username<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                fill="ivory" class="bi bi-pencil-square  ms-2" viewBox="0 0 16 16">
                 <path
                   d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
                 <path fill-rule="evenodd"
@@ -960,7 +966,8 @@
               </div>
               <div class="form-check form-switch mb-2">
                 <label class="form-check-label" for="dark_mode">Dark mode</label>
-                <input @click="darkModeSave()" v-model="darkMode" class="form-check-input" type="checkbox" role="switch" id="dark_mode">
+                <input @click="darkModeSave()" v-model="darkMode" class="form-check-input" type="checkbox" role="switch"
+                  id="dark_mode">
               </div>
               <div class="form-check form-switch mb-2">
                 <label class="form-check-label" for="sound">Turn on sound</label>
